cabal-version:      2.4

name:               meckweb
version:            0.1.0.0
build-type:         Simple

license:             MIT
license-file:        LICENSE
author:              Meck
maintainer:          johan@meck.se
copyright:           2020 Meck
extra-doc-files:     README.md

tested-with:         GHC == 8.6.5

executable site
  main-is:          Site.hs

  hs-source-dirs:   src

  other-modules:    Config

  build-depends:    base == 4.*
                  , hakyll
                  , clay
                  , text
                  , yaml
                  , aeson

  default-language: Haskell2010

executable css
  main-is:             default.hs

  hs-source-dirs:      css

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  build-depends:       base ==4.*
                      ,clay
                      ,text

  default-language:    Haskell2010
